force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <label>Order</label>
    <nameField>
        <displayFormat>O - {00000}</displayFormat>
        <label>Order No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>