force-app/main/default/objects/Order__c/fields/Address_of_Customer__c.field-meta.xml
<CustomField>
    <fullName>Address_of_Customer__c</fullName>
    <label>Address of Customer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>