force-app/main/default/objects/Order__c/fields/Arbitration__c.field-meta.xml
<CustomField>
    <fullName>Arbitration__c</fullName>
    <label>Arbitration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>