force-app/main/default/objects/Order__c/fields/Basic_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Basic_Order_Value__c</fullName>
    <label>Basic Order Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>