force-app/main/default/objects/Order__c/fields/Cases__c.field-meta.xml
<CustomField>
    <fullName>Cases__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cases</label>
    <referenceTo>Cases__c</referenceTo>
    <relationshipLabel>Order</relationshipLabel>
    <relationshipName>Order</relationshipName>
    <type>Lookup</type>
</CustomField>