force-app/main/default/objects/Order__c/fields/CGST__c.field-meta.xml
<CustomField>
    <fullName>CGST__c</fullName>
    <defaultValue>0.09</defaultValue>
    <label>CGST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>