force-app/main/default/objects/Order__c/fields/CGST_Amount__c.field-meta.xml
<CustomField>
    <fullName>CGST_Amount__c</fullName>
    <formula>IF( OR(State__c == &apos;Telangana&apos;,State__c == &apos;telangana&apos;,State__c == &apos;TELANGANA&apos;) , Sub_Total__c * CGST__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>