force-app/main/default/objects/Order__c/fields/Commissioning__c.field-meta.xml
<CustomField>
    <fullName>Commissioning__c</fullName>
    <label>Commissioning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>