force-app/main/default/objects/Order__c/fields/Confidentiality__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality__c</fullName>
    <label>Confidentiality</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>