force-app/main/default/objects/Order__c/fields/Engineering_Charges__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Charges__c</fullName>
    <label>Engineering Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>