force-app/main/default/objects/Order__c/fields/FAX_No__c.field-meta.xml
<CustomField>
    <fullName>FAX_No__c</fullName>
    <label>FAX No.</label>
    <length>200</length>
    <type>Text</type>
</CustomField>