force-app/main/default/objects/Order__c/fields/Final_Price_After_Discount__c.field-meta.xml
<CustomField>
    <fullName>Final_Price_After_Discount__c</fullName>
    <label>Final Price After Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>