force-app/main/default/objects/Order__c/fields/First_Concern_Person__c.field-meta.xml
<CustomField>
    <fullName>First_Concern_Person__c</fullName>
    <label>First Concern Person</label>
    <length>20</length>
    <type>Text</type>
</CustomField>