force-app/main/default/objects/Order__c/fields/Force_Majaure__c.field-meta.xml
<CustomField>
    <fullName>Force_Majaure__c</fullName>
    <label>Force Majaure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>