force-app/main/default/objects/Order__c/fields/Forwarding_Charge__c.field-meta.xml
<CustomField>
    <fullName>Forwarding_Charge__c</fullName>
    <formula>Basic_Order_Value__c  *  Forwarding_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forwarding Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>