force-app/main/default/objects/Order__c/fields/Grand_Amount__c.field-meta.xml
<CustomField>
    <fullName>Grand_Amount__c</fullName>
    <formula>Sub_Total__c  +  CGST_Amount__c  +  IGST_Amount__c  +  SGST_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>