force-app/main/default/objects/Order__c/fields/IGST__c.field-meta.xml
<CustomField>
    <fullName>IGST__c</fullName>
    <defaultValue>0.18</defaultValue>
    <label>IGST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>