force-app/main/default/objects/Order__c/fields/Insurance_Transit_Risk__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Transit_Risk__c</fullName>
    <label>Insurance &amp; Transit Risk</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>