force-app/main/default/objects/Order__c/fields/Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction__c</fullName>
    <label>Jurisdiction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>