force-app/main/default/objects/Order__c/fields/Package_Charges__c.field-meta.xml
<CustomField>
    <fullName>Package_Charges__c</fullName>
    <formula>Basic_Order_Value__c  *  Packing_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>