force-app/main/default/objects/Order__c/fields/Period_of_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Period_of_Warranty__c</fullName>
    <label>Period of Warranty</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>