force-app/main/default/objects/Order__c/fields/Quotes__c.field-meta.xml
<CustomField>
    <fullName>Quotes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotes</label>
    <referenceTo>Quotes__c</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>