force-app/main/default/objects/Order__c/fields/Second_Concern_Person__c.field-meta.xml
<CustomField>
    <fullName>Second_Concern_Person__c</fullName>
    <label>Second Concern Person</label>
    <length>20</length>
    <type>Text</type>
</CustomField>