force-app/main/default/objects/Order__c/fields/SGST__c.field-meta.xml
<CustomField>
    <fullName>SGST__c</fullName>
    <defaultValue>0.09</defaultValue>
    <label>SGST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>