force-app/main/default/objects/Order__c/fields/Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total__c</fullName>
    <formula>Package_Charges__c  +  Forwarding_Charge__c  +  Commissioning_Charges__c  +  Engineering_Charges__c  +  Transportation_Charges__c  +  Transit_Insurance_Amount__c + Basic_Order_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>