force-app/main/default/objects/Order__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <label>Supplier Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>