force-app/main/default/objects/Order__c/fields/Taxes_Duties__c.field-meta.xml
<CustomField>
    <fullName>Taxes_Duties__c</fullName>
    <label>Taxes &amp; Duties</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>