force-app/main/default/objects/Order__c/fields/Transit_Insurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Transit_Insurance_Amount__c</fullName>
    <formula>Basic_Order_Value__c  *  Transit_Insurance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transit Insurance Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>