force-app/main/default/objects/Order__c/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <label>Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>