force-app/main/default/objects/Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quotes__c</columns>
    <columns>State__c</columns>
    <columns>CGST_Amount__c</columns>
    <columns>CGST__c</columns>
    <columns>IGST_Amount__c</columns>
    <columns>IGST__c</columns>
    <columns>SGST_Amount__c</columns>
    <columns>SGST__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>